--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     implementation 'com.hbb20:ccp:2.6.0'
     implementation 'com.google.android.gms:play-services-auth:20.6.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 }
 
 //  implementation 'com.google.firebase:firebase-auth:21.1.0'
